Change kv section according to the design

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,9 @@
         <div class="es-kv__wrapper">
           <div class="es-kv__content">
             <img src="./images/logo.png" alt="" class="es-kv__logo">
-            <h2 class="es-kv__title">Odbudowujące<br>Serum z Retinolem</h2>
-            <p class="es-kv__text">Dla Każdego Typu Skóry, Także Wrażliwej</p>
-            <p class="es-kv__subtitle">Delikatna <strong>formuła z retinolem</strong><br class="es-desktop-break"> wyrównuje koloryt skóry i&nbsp;redukuje<br class="es-desktop-break"> widoczność porów*​</p>
-            <p class="es-kv__text--small">*Ocena konsumencka</p>
+            <h2 class="es-kv__title"><span>SA</span> Wygładzający<br>Żel do Mycia</h2>
+            <p class="es-kv__text">Dla Skóry Szorstkiej,<br class="es-desktop-break"> z Grudkami, Suchej</p>
+            <p class="es-kv__subtitle">Skutecznie złuszcza,<br class="es-desktop-break">zmiękcza i wygładza skórę</p>
           </div>
           <div class="es-kv__packshot">
             <img src="./images//packshot.png" alt="Opakowanie zelu CeraVe" class="es-kv__image">
