Change solution section according to the design

--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,17 @@
           <div class="es-solution__tile es-solution__tile--left">
             <h2 class="es-solution__title">problem</h2>
             <img src="./images/solution-1.png" alt="" class="es-solution__image">
-            <p class="es-solution__subtitle">Przebarwienia<br><br></p>
-            <p class="es-solution__text">Ślady potrądzikowe, przebarwienia, nierównomierny koloryt skóry.</p>
+            <p class="es-solution__subtitle">Zaburzenia rogowacenia<br><br></p>
+            <p class="es-solution__text">Objawy takie jak: szorstkość
+              i&nbsp;suchość skóry, łuszczenie, grudki, czerwone krostki okołomieszkowe</p>
           </div>
           <div class="es-solution__tile es-solution__tile--right">
             <h2 class="es-solution__title">rozwiązanie</h2>
             <img src="./images/solution-2.png" alt="" class="es-solution__image">
-            <p class="es-solution__subtitle">Odbudowujące Serum<br>z Retinolem</p>
-            <p class="es-solution__text">Delikatny, zamknięty w kapsułkach retinol
-              <strong>wspomaga zmniejszenie widoczności przebarwień i&nbsp;śladów potrądzikowych,</strong> bez
-              podrażnień i&nbsp;naruszania bariery ochronnej skóry.</p>
+            <p class="es-solution__subtitle">SA Wygładzający żel&nbsp;do&nbsp;mycia</p>
+            <p class="es-solution__text">Skutecznie złuszcza, zmiękcza
+              i&nbsp;wygładza skórę już&nbsp;podczas mycia, <strong>bez&nbsp;naruszania bariery ochronnej skóry</strong>, dzięki czemu jest odpowiedni
+              <strong>nawet do&nbsp;skóry wrażliwej</strong></p>
           </div>
           <div class="es-solution__tile es-solution__tile--image">
             <img src="./images/solution-image-2.png" alt="" class="es-solution__img">
