Change icons section according to the design

--- a/src/index.html
+++ b/src/index.html
@@ -50,30 +50,23 @@
         </div>
       </div>
       <div class="es-icons">
-        <p class="es-icons__text"><strong>Zmniejsza widoczność porów i&nbsp;zmian potrądzikowych</strong>.  Pomaga odbudować barierę ochronną
-          i&nbsp;wygładza skórę, jednocześnie jej&nbsp;nie&nbsp;wysuszając.</p>
+       
+        <p class="es-icons__text"><strong>Unikalna, wygładzająca formuła</strong> opracowana z&nbsp;dermatologami, która&nbsp;delikatnie <strong>oczyszcza i&nbsp;złuszcza skórę</strong>, oraz&nbsp;dba&nbsp;o&nbsp;jej prawidłowe nawilżenie</p>
         <div class="es-icons__wrapper">
           <div class="es-icons__single">
             <img src="./images/icons-1.png" alt="" class="es-icons__image">
-            <p class="es-icons__desc">Nie wysusza skóry</p>
+            <p class="es-icons__desc">Bezzapachowy,<br>hipoalergiczny,<br>niekomedogenny</p>
           </div>
           <div class="es-icons__single">
             <img src="./images/icons-2.png" alt="" class="es-icons__image">
-            <p class="es-icons__desc">Nie zawiera<br>substancji<br>zapachowych</p>
+            <p class="es-icons__desc">Nie zawiera<br>mydła<br></p>
           </div>
           <div class="es-icons__single">
             <img src="./images/icons-3.png" alt="" class="es-icons__image">
-            <p class="es-icons__desc">Odpowiednie dla<br>skóry wrażliwej</p>
-          </div>
-          <div class="es-icons__single">
-            <img src="./images/icons-4.png" alt="" class="es-icons__image">
-            <p class="es-icons__desc">Niekomedogenny</p>
-          </div>
-          <div class="es-icons__single">
-            <img src="./images/icons-5.png" alt="" class="es-icons__image">
-            <p class="es-icons__desc">Delikatne<br>dla skóry</p>
+            <p class="es-icons__desc">Odpowiedni od<br>3 roku życia</p>
           </div>
         </div>
+        <img src="./images/bg-icons.png" alt="" class="es-icons__bg">
       </div>
       <div class="es-ingriedients">
         <div class="es-ingriedients__wrapper">
