Change ingriedients section according to the design

--- a/src/index.html
+++ b/src/index.html
@@ -74,29 +74,30 @@
             <h2 class="es-ingriedients__title"><strong>Składniki</strong> aktywne</h2>
             <div class="es-ingriedients__single">
               <img src="./images/ingriedients-1.png" alt="" class="es-ingriedients__item">
-              <p class="es-ingriedients__above">3 kluczowe ceramidy</p>
+              <p class="es-ingriedients__above">Ceramidy</p>
               <p class="es-ingriedients__under">Odbudowują naturalną barierę ochronną skóry</p>
             </div>
             <div class="es-ingriedients__single">
               <img src="./images/ingriedients-2.png" alt="" class="es-ingriedients__item">
-              <p class="es-ingriedients__above">Kapsułkowy Retinol</p>
-              <p class="es-ingriedients__under">Wygładza i niweluje przebarwienia</p>
+              <p class="es-ingriedients__above">Kwas salicylowy</p>
+              <p class="es-ingriedients__under">Pomaga złuszczać komórki naskórka</p>
             </div>
             <div class="es-ingriedients__single">
               <img src="./images/ingriedients-3.png" alt="" class="es-ingriedients__item">
-              <p class="es-ingriedients__above">Ekstrakt z korzenia lukrecji</p>
-              <p class="es-ingriedients__under">Pomaga rozjaśnić koloryt skóry</p>
+              <p class="es-ingriedients__above">Kwas hialuronowy</p>
+              <p class="es-ingriedients__under">Nawilża skórę</p>
             </div>
             <div class="es-ingriedients__single">
               <img src="./images/ingriedients-4.png" alt="" class="es-ingriedients__item">
-              <p class="es-ingriedients__above">Niacynamid</p>
-              <p class="es-ingriedients__under">Koi skórę</p>
+              <p class="es-ingriedients__above">Glukonolakton</p>
+              <p class="es-ingriedients__under">Naturalny antyoksydant. Wygładza skórę.</p>
             </div>
           </div>
           <div class="es-ingriedients__tile es-ingriedients__tile--right">
             <img src="./images/ingriedients-packshot.png" alt="" class="es-ingriedients__image">
           </div>
         </div>
+        <img src="./images/bg-ingredients.png" alt="" class="es-ingriedients__bg">
       </div>
       <div class="es-solution-2">
         <div class="es-solution-2__wrapper">
