Change cross section

--- a/src/index.html
+++ b/src/index.html
@@ -134,32 +134,17 @@
           <div class="es-cross__single">
             <p class="es-cross__number">1</p>
             <img src="./images/cross-1.png" alt="" class="es-cross__image">
-            <p class="es-cross__subtitle">Żel Myjący Przeciw Niedoskonałościom</p>
-            <p class="es-cross__desc">Umyj twarz używając Żelu Myjącego Przeciw Niedoskonałościom, który oczyszcza pory, wspomaga zmniejszenie niedoskonałości
-              oraz&nbsp;redukuje nadmiar sebum, nie&nbsp;naruszając bariery ochronnej skóry.
+            <p class="es-cross__subtitle">SA ŻEL WYGŁADZAJĄCY DO MYCIA</p>
+            <p class="es-cross__desc">Delikatnie oczyszcza i&nbsp;złuszcza skórę już&nbsp;podczas mycia
             </p>
-            <a href="#" class="es-cross__link">Dowiedz się więcej</a>
           </div>
           <div class="es-cross__single">
-            <p class="es-cross__number">2</p>
+            <p class="es-cross__number es-cross__number--2">2</p>
             <img src="./images/cross-2.png" alt="" class="es-cross__image">
-            <p class="es-cross__subtitle">Odbudowujące Serum<br>
+            <p class="es-cross__subtitle">SA Wygładzający Balsam<br>
               z Retinolem</p>
-            <p class="es-cross__desc">Na osuszoną skórę twarzy nałóż Odbudowujące Serum
-              z&nbsp;Retinolem, które wygładza skórę i&nbsp;zmniejsza widoczność zmian potrądzikowych, bez&nbsp;podrażnień i&nbsp;naruszania bariery ochronnej skóry.</p>
-          </div>
-          <div class="es-cross__single">
-            <p class="es-cross__number">3</p>
-            <img src="./images/cross-3.png" alt="" class="es-cross__image">
-            <p class="es-cross__subtitle">Nawilżający Krem<br>
-              do Twarzy</p>
-            <p class="es-cross__desc">Po aplikacji serum nałóż Nawilżający Krem do&nbsp;Twarzy, który dogłębnie nawilża skórę.
-              <br class="es-desktop-break">
-              <br class="es-desktop-break">
-              <br class="es-desktop-break">
-              <br class="es-desktop-break">
-            </p>
-            <a href="#" class="es-cross__link">Dowiedz się więcej</a>
+            <p class="es-cross__desc">Zawiera dodatkowo mocznik, który złuszcza, zmiękcza i&nbsp;wygładza szorstką skórę</p>
+              <a href="#" class="es-cross__link">Dowiedz się więcej</a>
           </div>
         </div>
       </div>
